--- a/style.css
+++ b/style.css
@@ -28,8 +28,15 @@ div {
   }
 }
 
-
+#hello-container {
+  display: flex;
+  flex-direction: column;
+}
 
 button {
- 
+ display: block;
+}
+
+h2 {
+  display: block;
 }
