--- a/style.css
+++ b/style.css
@@ -38,6 +38,17 @@ div {
   flex-direction: column;
 }
 
+#whispers-container {
+  display: flex;
+  flex-direction: column;
+}
+
+#the-whispers {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
 button {
  display: block;
 }
