changed flex direction on the whispers container

--- a/style.css
+++ b/style.css
@@ -46,7 +46,8 @@ div {
 #the-whispers {
   width: 100%;
   display: flex;
-  flex-direction: column;
+  flex-direction: column-reverse;
+  justify-content: start;
   overflow: hidden;
 }
 
